--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
               Psychic Game
             </h1>
             <h2 class='display-4 text-light col-xs-4'>
-              What Letter Am I Thinking Of ???
+              Can You Guess the letter?
             </h2>
-            <button class='btn btn-lrg btn-warning mb-4 py-3' id='start'> Start / Reset </button>
+            <button class='btn btn-lrg btn-warning mb-4 py-3' id='start'> Start Game / Reset Score </button>
           </div>
         </div>
-        <div class='container text-center pt-5 georgia'>
+        <div class='container text-center pt-5'>
           <div class="card bg-info">
+              <img class="card-img-top col-xs-3 col-md-3 img-fluic mx-auto my-3" src="assets/images/psychic.jpeg" alt="Card image">
             <div class="card-header text-white">
-              <h5 class='h5'>
+              <h5 class='display-4'>
                 Statistics
               </h5>
             </div>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush georgia">
               <li class="list-group-item list-group-item-info" id='won'>
                 Starting Wins: 0
               </li>
@@ -45,7 +46,7 @@
               <li class="list-group-item list-group-item-info" id='remain'>
                 Starting Guesses: 10
               </li>
-              <li class="list-group-item list-group-item-info" id= 'arrGuess'>
+              <li class="list-group-item list-group-item-info" id= 'arrayGuess'>
                 Starting Letters Guessed: 0
               </li>
             </ul>
