--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
     <title>Psychic Game</title>
   </head>
   <body>
-      <div class="container-flex">
+      <div class="container-flex bg-secondary">
         <div class = "row">
-          <div class="text-center bg-dark col-md-12 col-xs-6" id="game">
-            <h1 class='display-2 text-success col-xs-6'>
+          <div class="text-center bg-dark col-md-12 col-xs-6 py-5 mx-auto" id="game">
+            <h1 class='display-3 text-success'>
               Psychic Game
             </h1>
-            <h2 class='display-4 text-light col-xs-4'>
+            <h2 class='h1 text-light col-xs-4 pb-3'>
               Can You Guess the letter?
             </h2>
-            <button class='btn btn-lrg btn-warning mb-4 py-3' id='start'> Start Game / Reset Score </button>
+            <button class='btn btn-large btn-warning' id='start'> 
+                <img class="col-xs-6 col-md-6 img-fluid mx-auto my-2 d-block" src="assets/images/psychic.jpeg" alt="psychic image">
+              Start Game / Reset Score
+            </button>
           </div>
         </div>
-        <div class='container text-center pt-5'>
-          <div class="card bg-info">
-              <img class="card-img-top col-xs-3 col-md-3 img-fluic mx-auto my-3" src="assets/images/psychic.jpeg" alt="Card image">
+        <div class='container text-center py-5'>
+          <div class="card bg-info col-xs-6 col-md-12">
             <div class="card-header text-white">
-              <h5 class='display-4'>
+              <h5 class='h1'>
                 Statistics
               </h5>
             </div>
