--- a/index.html
+++ b/index.html
@@ -1,67 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <!-- StyleSheets -->
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+        <!-- StyleSheets -->
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 
-    <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>Psychic Game</title>
-  </head>
-  <body>
-      <div class="container-flex bg-secondary">
-        <div class = "row">
-          <div class="text-center bg-dark col-md-12 col-xs-6 py-5 mx-auto" id="game">
-            <h1 class='display-3 text-success'>
-              Psychic Game
-            </h1>
-            <h2 class='h1 text-light col-xs-4 pb-3'>
-              Can You Guess the letter?
-            </h2>
-            <button class='btn btn-large btn-warning' id='start'> 
-                <img class="col-xs-6 col-md-6 img-fluid mx-auto my-2 d-block" src="assets/images/psychic.jpeg" alt="psychic image">
-              Start Game / Reset Score
-            </button>
-          </div>
-        </div>
-        <div class='container text-center py-5'>
-          <div class="card bg-info col-xs-6 col-md-12">
-            <div class="card-header text-white">
-              <h5 class='h1'>
-                Statistics
-              </h5>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.css">
+        <title>
+            Psychic Game
+        </title>
+    </head>
+<body class="text-center pt-5" id="bg">
+    <section class="container">
+        <div class="my-5" id="psy">
+            <div class="my-3 text-dark">
+                <h2>
+                    Psychic Game
+                </h2>
+                <h4>
+                    Can you guess the letter?
+                </h4>
+                <div>
+                    <button class='btn btn-large btn-danger' id='start'> 
+                        Start the Game OR Reset the Score
+                    </button>
+                </div>
             </div>
-            <ul class="list-group list-group-flush georgia">
-              <li class="list-group-item list-group-item-info" id='won'>
-                Starting Wins: 0
-              </li>
-              <li class="list-group-item list-group-item-info" id="lost">
-                Starting Losses: 0
-              </li>
-              <li class="list-group-item list-group-item-info" id='remain'>
-                Starting Guesses: 10
-              </li>
-              <li class="list-group-item list-group-item-info" id= 'arrayGuess'>
-                Starting Letters Guessed: 0
-              </li>
-            </ul>
-          </div>
+            <div class="my-3 mx-auto col-10 mt-5 text-light">
+                <h5>
+                    Game Statistics
+                </h5>
+                <div class="border border-primary mx-auto col-10">
+                    <div id="won" class="border-bottom">
+                        You haven't won any games yet.
+                    </div>
+                    <div id="lost" class="border-bottom">
+                        You haven't lost any games yet.
+                    </div>
+                    <div id="remain" class="border-bottom">
+                        You Start with 10 Guesses.
+                    </div>
+                    <div id="arrayGuess">
+                        You have guessed 0 letters.
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-<!-- Optional JavaScript -->
+    </section>
+    <!-- Optional JavaScript -->
 <script src="assets/javascript/game.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
-  </body>
-  </html>
+</body>
+</html>
