--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
             </div>
         </div>
     </section>
+    <footer class="footer fixed-bottom">
+        <div class="container">
+            <h4 class="text-primary">
+                &copy;
+                &nbsp;
+                2018 Chelsea Gieck
+            </h4>
+        </div>
+    </footer>
     <!-- Optional JavaScript -->
 <script src="assets/javascript/game.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
